--- a/index.html
+++ b/index.html
@@ -21,91 +21,94 @@
             <li><a href="#contact">Contact</a></li>
         </nav>
     </header>
-    <!--BANNER SECTION-->
+    <!--BODY WRAPPER-->
     <div class="main">
-    <section class="banner-area" id="home">
-        <div class="banner-img"></div>
-        <div class="banner-text">
-            <h3>Lenda</h3>
-            <blockquote>
-                <p>The traveler sees what he sees, the tourist sees what he has come to see.</p>
-                <small>G.K. Chesterton</small>
-            </blockquote>
-            <a href="#" class="btn">Start Your Journey</a>
-        </div>
-    </section>
-    <!--ABOUT SECTION-->
-    <section class="about-area" id="about">
-        <h2>About</h2>
-        <div class="content">
-            <div class="about-box">
-                <div class="about-icon">
-                    <i class="fas fa-cut" aria-hidden="true"></i>
+        <!--BANNER SECTION-->
+        <section class="banner-area" id="home">
+            <div class="banner-img"></div>
+            <div class="banner-text">
+                <h3>Lenda</h3>
+                <blockquote>
+                    <p>The traveler sees what he sees, the tourist sees what he has come to see.</p>
+                    <small>G.K. Chesterton</small>
+                </blockquote>
+                <a href="#" class="btn">Start Your Journey</a>
+            </div>
+        </section>
+        <!--ABOUT SECTION-->
+        <section class="about-area" id="about">
+            <h2>About</h2>
+            <div class="content">
+                <div class="about-box">
+                    <div class="about-icon">
+                        <i class="fas fa-cut" aria-hidden="true"></i>
+                    </div>
+                    <h3>Custom-made</h3>
+                    <p>Tailored to your needs and desires, our tours are lovingly crafted for perfect fit.</p>
                 </div>
-                <h3>Custom-made</h3>
-                <p>Tailored to your needs and desires, our tours are lovingly crafted for perfect fit.</p>
-            </div>
-            <div class="about-box">
-                <div class="about-icon">
-                    <i class="fas fa-luggage-cart" aria-hidden="true"></i>
+                <div class="about-box">
+                    <div class="about-icon">
+                        <i class="fas fa-luggage-cart" aria-hidden="true"></i>
+                    </div>
+                    <h3>All-inclusive</h3>
+                    <p>From airport taxi to opera tickets, we've got you covered. No hidden costs.</p>
                 </div>
-                <h3>All-inclusive</h3>
-                <p>From airport taxi to opera tickets, we've got you covered. No hidden costs.</p>
-            </div>
-            <div class="about-box">
-                <div class="about-icon">
-                    <i class="fas fa-atlas" aria-hidden="true"></i>
+                <div class="about-box">
+                    <div class="about-icon">
+                        <i class="fas fa-atlas" aria-hidden="true"></i>
+                    </div>
+                    <h3>Authentic</h3>
+                    <p>Leave the beaten track behind and discover the world away from crowds.</p>
                 </div>
-                <h3>Authentic</h3>
-                <p>Leave the beaten track behind and discover the world away from crowds.</p>
-            </div>
-            <div class="about-box">
-                <div class="about-icon">
-                    <i class="fas fa-umbrella" aria-hidden="true"></i>
+                <div class="about-box">
+                    <div class="about-icon">
+                        <i class="fas fa-umbrella" aria-hidden="true"></i>
+                    </div>
+                    <h3>Safe</h3>
+                    <p>Your safety is our priority. We always offer quality accomodation and cetified local guides.</p>
                 </div>
-                <h3>Safe</h3>
-                <p>Your safety is our priority. We always offer quality accomodation and cetified local guides.</p>
             </div>
-        </div>
-    </section>
-    <div class="divider"></div>
-    <!--GALLERY SECTION-->
-    <section class="gallery-area" id="gallery">
-        <h2>Destinations</h2>
-        <ul class="content">
-            <li class="overlay">
-                <img src="img/japan.jpg" alt="Side street in Japanese town">
-                <a class="link" href="#"><p><span>Japan</span><br> Learn more</p></a>
-            </li>
-            <li class="overlay"><img src="img/new-zealand.jpg" alt="Sheep in field in New Zealand">
-                <a class="link" href="#"><p><span>New Zealand</span><br> Learn more</p></a>
-            </li>
-            <li class="overlay"><img src="img/bhutan.jpg" alt="Colorful hanging tapestry in Bhutan">
-                <a class="link" href="#"><p><span>Bhutan</span><br>Learn more</p></a>
-            </li>
-        </ul>
-    </section>
-    <!--CONTACT SECTION-->
-    <section class="contact-area" id="contact">
-        <h2>Contact</h2>
-        <div class="content">
-            <div class="contact-box">
-                <i class="fas fa-phone" aria-hidden="true"></i>
-                <p>+51 345 780</p>
-                <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
-                <p>lenda@great-domain.com</p>
-                <i class="fas fa-map-marked-alt" aria-hidden="true"></i>
-                <p>1640 Riverside Drive, Hill Valley<br>California, USA</p>
+        </section>
+        <div class="divider"></div>
+        <!--GALLERY SECTION-->
+        <section class="gallery-area" id="gallery">
+            <h2>Destinations</h2>
+            <ul class="content">
+                <li class="overlay">
+                    <img src="img/japan.jpg" alt="Side street in Japanese town">
+                    <a class="link" href="#"><p><span>Japan</span><br> Learn more</p></a>
+                </li>
+                <li class="overlay"><img src="img/new-zealand.jpg" alt="Sheep in field in New Zealand">
+                    <a class="link" href="#"><p><span>New Zealand</span><br> Learn more</p></a>
+                </li>
+                <li class="overlay"><img src="img/bhutan.jpg" alt="Colorful hanging tapestry in Bhutan">
+                    <a class="link" href="#"><p><span>Bhutan</span><br>Learn more</p></a>
+                </li>
+            </ul>
+        </section>
+        <!--CONTACT SECTION-->
+        <section class="contact-area" id="contact">
+            <h2>Contact</h2>
+            <div class="content">
+                <div class="contact-box">
+                    <i class="fas fa-phone" aria-hidden="true"></i>
+                    <p>+51 345 780</p>
+                    <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
+                    <p>lenda@great-domain.com</p>
+                    <i class="fas fa-map-marked-alt" aria-hidden="true"></i>
+                    <p>1640 Riverside Drive, Hill Valley<br>California, USA</p>
+                </div>
+                <div class="contact-box">
+                    <input type="text" placeholder="Your name">
+                    <input type="email" placeholder="Your email">
+                    <input type="button" value="Submit">    
+                </div>
             </div>
-            <div class="contact-box">
-                <input type="text" placeholder="Your name">
-                <input type="email" placeholder="Your email">
-                <input type="button" value="Submit">    
-            </div>
-        </div>
-    </section>
-    <footer>
-        <p>&copy; Copyright 2019 Lenda Travel Inc.</p>
+        </section>
+        <!--FOOTER-->
+        <footer>
+            <p>&copy; Copyright 2019 Lenda Travel Inc.</p>
+        </footer>
     </div>
 </body>
 </html>
