--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>The traveler sees what he sees, the tourist sees what he has come to see.</p>
                     <small>G.K. Chesterton</small>
                 </blockquote>
-                <a href="#" class="btn">Start Your Journey</a>
+                <a href="#contact" class="btn">Start Your Journey</a>
             </div>
         </section>
         <!--ABOUT SECTION-->
